# tt-boltz

./: .gitignore  README.md  pyproject.toml
scripts/: switch_fw_cores.sh
tests/: generate_random_protein_sweep.py  run_tests.sh  test_tenstorrent.py
tt_boltz/: boltz2.py  energy.py  main.py  tenstorrent.py
tt_boltz/data/: featurizer.py  parse.py
