[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-boltz"
version = "0.1"
description = "Boltz-2 implementation for inference on Tenstorrent Blackhole"
dependencies = [
    "torch",
    "numpy",
    "rdkit",
    "requests",
    "pandas",
    "einops",
    "mashumaro",
    "modelcif",
    "click",
    "pyyaml",
    "biopython",
    "scipy",
    "numba",
    "gemmi",
    "scikit-learn",
    "chembl_structure_pipeline",
    "tqdm",
    "rich",
    "pytest",
    "ttnn==0.68.0",
]

[project.scripts]
tt-boltz = "tt_boltz.main:cli"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["tt_boltz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
